# voidscaledb

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  README.md
benchmarks/: benchmark.sh  run.sh  summarize.py  summarize.sh
src/: lib.rs  main.rs  server.rs  util.rs
src/commands/: mod.rs  options.rs  registry.rs
src/commands/exec/: mod.rs
src/commands/handlers/: key.rs  keyspace.rs  mod.rs  server.rs  string.rs
src/engine/: coordinator.rs  kv.rs  message.rs  mod.rs  shard.rs  value.rs
src/execution/: mod.rs  registry.rs
src/execution/commands/: keyspace.rs  mod.rs  server.rs  string.rs
src/network/: client.rs  connection.rs  error.rs  listener.rs  mod.rs  server.rs
src/protocol/: codec.rs  command.rs  error.rs  mod.rs  reply.rs
src/protocol/resp2/: decoder.rs  encoder.rs  mod.rs
src/runtime/: affinity.rs  dispatch.rs  error.rs  handler.rs  message.rs  mod.rs  resolver.rs  runtime.rs  worker.rs
src/storage/: error.rs  key.rs  kv.rs  mod.rs  record.rs  result.rs  storage.rs  strings.rs  value.rs
src/storage/ops/: key.rs  mod.rs  string.rs
tests/commands/: key.rs  mod.rs  string.rs
tests/common/: mod.rs
