[package]
name = "voidscale"
version = "0.1.0"
edition = "2024"
authors = ["Karthick P <karthickponvel>"]
license = "Apache-2.0"

[dependencies] 
socket2 = "0.6"
thiserror = "2"
bytes = "1"
smallvec = "1"
kanal = "0.1"
oneshot = "0.1"
ahash = "0.8"
core_affinity = "0.8.3"
num_cpus = "1.17"
tokio = { version = "1", features = ["full"] }